template/gemini/template_20250119_192830.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  CloudFormation template to create a PrivateLink connection to an SAP server.
Resources:
  SAPServerVpcEndpointService:
    Type: AWS::EC2::VPCEndpointService
    Properties:
      AcceptanceRequired: true
      NetworkLoadBalancer: !Ref SAPServerNetworkLoadBalancer
      PrivateDnsEnabled: true
      ServiceName: !Sub sap-server-${AWS::Region}
  SAPServerNetworkLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: sap-server-nlb
      Scheme: internal
      Subnets:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      SecurityGroups:
        - !Ref SAPServerSecurityGroup
      Type: application
      IpAddressType: ipv4
  SAPServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for SAP server PrivateLink
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref VPCPeeringSecurityGroup
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref VPCPeeringSecurityGroup
      VpcId: !Ref VPC
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs]
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: false
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs]
      CidrBlock: 10.0.2.0/24
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: false
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
  VPCPeeringSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Peering security group for client VPC
      VpcId: !Ref VPC
      SecurityGroupIngress: []
Outputs:
  SAPServerVPCEndpointService:
    Value: !Ref SAPServerVpcEndpointService
    Description: The ID of the VPC Endpoint Service.
  SAPServerNetworkLoadBalancerDNS:
    Value: !GetAtt SAPServerNetworkLoadBalancer.DNSName
    Description: The DNS name of the Network Load Balancer.
